# favorite-places

./: .env.example  .gitignore  AGENTS.md  README.md  astro.config.mjs  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  prek.toml  pyproject.toml  vitest.config.mjs
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  data-refresh.yml  playwright.yml  todo-to-issue.yml
data/raw/: aguacalientes-peru.json  aguascalientes-peru.json  alishan-taiwan.csv  alishan-taiwan.json  almaty-kazakhstan.json  amalfi-coast-italy.json  amsterdam-netherlands.json  austin-texas-usa.json  austin-texas.json  baku-azerbaijan.json  bali-indonesia.json  bangkok-thailand.json  bangor-maine-usa.json  bangor-maine.json  barcelona-spain.json  belfast-northern-ireland.json  berlin-germany.json  bilbao-and-san-sebastian-spain.json  bologna-italy.json  boston-massachusetts-usa.json  boston-massachusetts.json  brisbane-gold-coast-australia.json  brussels-belgium.json  budapest-hungary.json  busan-korea.json  cannes-france.json  cape-town-south-africa.json  cape-winelands-south-africa.json  capri-italy.json  chengdu-china.json  chiang-mai-thailand.json  chiayi-taiwan.json  chicago-illinois-usa.json  chicago-illinois.json  copenhagen-denmark.json  cusco-peru.json  danang-vietnam.json  dijon-france.json  dubai-uae.json  (+101 more)
docs/: ARCHITECTURE.md  design-system.md  llm-evals.md
scripts/: __init__.py  build_data.py  dev.mjs  evaluate_llms.py  export_marker_icons.mjs  llm_model_profiles.json  pipeline_models.py  refresh_profiles.py  refresh_summary.py  worktree_dev_port.mjs
site/: config.ts  list_sources.json  theme.css
site.example/: build_hooks.py  config.ts  enrichment.json  list_sources.json  theme.css
src/: env.d.ts  middleware.ts
tests/: test_cli.py
(+163 files in other folders)
