[project]
name = "favorite-places-pipeline"
version = "0.1.0"
description = "Data pipeline for favorite-places."
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"
dependencies = [
  "gmaps-scraper",
  "pillow>=11.2.0,<12.0.0",
  "pycountry>=24.6.1,<25.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
]

[tool.uv.sources]
gmaps-scraper = { path = "vendor/gmaps-scraper" }
