[project]
name = "favorite-places-pipeline"
version = "0.1.0"
description = "Data pipeline for favorite-places."
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"
dependencies = [
  "gmaps-scraper",
  "pillow>=12.2.0,<13.0.0",
  "pycountry>=24.6.1,<25.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.18.2,<2.0.0",
  "ruff>=0.14.1,<0.15.0",
]

[tool.uv.sources]
gmaps-scraper = { path = "vendor/gmaps-scraper" }

[tool.ruff]
target-version = "py314"
extend-exclude = ["vendor"]

[tool.mypy]
python_version = "3.14"
files = [
  "scripts/pipeline_models.py",
  "scripts/refresh_profiles.py",
  "scripts/refresh_summary.py",
]
exclude = ["^vendor/"]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
